bad/method_call_invalid_arg_conversion_class_to_array.example_compiler_output
ERROR
[1mbad/method_call_invalid_arg_conversion_class_to_array.lat:5:14: [1;31merror: [0;1mvalue of type `X` is not convertible to type `int[]`[m
	(new G).foo(new X);
	            [1;32m^[m
[1mbad/method_call_invalid_arg_conversion_class_to_array.lat:10:2: [1;34mnote: [0;1m`foo` declared here[m
	void foo(int[] a) {}
	[1;32m^[m
